fix(spacing): Fixed spacing issues

--- a/css/templates/lune/components/_header.css
+++ b/css/templates/lune/components/_header.css
@@ -21,6 +21,7 @@
 .ampstart-navbar-trigger {
   padding-left: var(--space-1);
   font-size: var(--h4);
+  line-height: var(--line-height-1);
 }
 
 /* Animate the hamburger menu when focused and hovered over */
@@ -65,9 +66,8 @@
     margin-top: var(--wide-navbar-height);
   }
 
-  .ampstart-headerbar-nav,
-  .ampstart-navbar-trigger {
-    line-height: var(--wide-navbar-height);
+  .ampstart-headerbar-nav {
+     line-height: var(--wide-navbar-height);
   }
 
   .ampstart-sidebar-header {
